# esp32chatbot

./: .gitignore  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  system_info.cc
main/assets/: lang_config.h
main/audio/: audio_service.cc  audio_service.h
main/boards/: README.md
main/boards/common/: board.cc
main/display/: lcd_display.cc
